@@ -1,3 +1,9 @@
+2004-01-19  Andrey Slusar <rusfidogate@users.sourceforge.net>
+
+	* src/gate/rfc2ftn.c: fix disable FIDO_STYLE_MSGID
+	* src/areafix/areafix.c: fix AF_AVAIL, fix disable
+	    AF_AVAIL
+
 2004-01-12  Andrey Slusar <rusfidogate@users.sourceforge.net>
 
 	* doc/examples: fixes
